[package]
name = "hyperterm-video"
version = "1.0.0"
edition = "2021"
authors = ["HyperTerm Contributors"]
description = "Production-grade terminal video player in Rust"
repository = "https://github.com/Kjad-C/hyperterm-video"
license = "MIT"

[dependencies]
ffmpeg-next = "7.0"
crossterm = "0.27"
ratatui = "0.26"
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
parking_lot = "0.12"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
dashmap = "5.5"
ndarray = "0.15"
ndarray-stats = "0.5"
image = "0.24"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1.35", features = ["full"] }
libc = "0.2"
cfg-if = "1.0"
walkdir = "2.4"
chrono = "0.4"
uuid = { version = "1.0", features = ["v4"] }

[target.'cfg(target_arch = "x86_64")'.dependencies]
packed_simd_2 = "0.3"

[target.'cfg(windows)'.dependencies]
winapi-util = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev]
opt-level = 2
